fix: timetable icon alignment (again)
- Wrap alert icon in `<span>` for consistency with other icons
- Use existing `SvgIconWithCircle` helper to render Access icon at *default* rather than small size
- Extra CSS to align icons for Edge, simplified CSS to remove unneeded icon positioning tweaks

--- a/apps/site/assets/css/_timetable.scss
+++ b/apps/site/assets/css/_timetable.scss
@@ -143,27 +143,25 @@
 }
 
 .m-timetable__stop-icons {
-  align-items: center;
   display: flex;
-  gap: 1px;
+  gap: .125em;
+  line-height: initial;
+
+  // tweak size to be closer to the non-FA icons
+  .fa {
+    font-size: calc(1em + 1.45px);
+  }
 }
 
 .m-timetable__stop-alert,
 .m-timetable__access-icon,
 .m-timetable__parking-icon {
+  align-self: stretch;
+  display: inline-flex; // better alignment in Edge
+
   @include media-breakpoint-down(sm) {
     font-size: 12px;
   }
-}
-
-.m-timetable__parking-icon .fa-square-parking {
-  font-size: calc(1em + 1.5px);
-  position: relative;
-  top: .04em;
-}
-
-.m-timetable__access-icon {
-  margin-left: .1em; // Forces word split of Stops at small breakpoints
 }
 
 .m-timetable__row,
